# AOC2022

./: README.md
day1/src/: main.rs
day2/src/: main.rs
day3/benches/: compare.rs
day3/src/: main.rs
day3/src/lib/: lib.rs
day4/src/: main.rs
day5/src/: main.rs
day6/: Cargo.toml
day6/benches/: compare.rs
day6/src/: main.rs
day6/src/lib/: lib.rs
day8/: Cargo.toml  heaptrack.day8.28977.zst  heaptrack.day8.31382.zst  heaptrack.day8.34076.zst  heaptrack.day8.34722.zst
day8/benches/: test.rs
day8/src/: main.rs
day8/src/lib/: lib.rs
