[package]
name = "day3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
[lib]
name = "day6"
path = "src/lib/lib.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "compare"
harness = false
