[package]
name = "day8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day8"
path = "src/lib/lib.rs"

[dependencies]
ndarray = "0.15"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "test"
harness = false
